dist/media/Ingress.radarr.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: radarr
  namespace: media
spec:
  rules:
    - host: radarr.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: radarr
                port:
                  number: 7878
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - radarr.cmdcentral.xyz
      secretName: media-tls
